--- a/Assets/css/Main.css
+++ b/Assets/css/Main.css
@@ -1,454 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
-pre {
-  margin: 2rem 0 2rem;
-  line-height: 1.5rem;
-  font-size: 1rem;
-}
-
-pre.snippet code {
-  color: rgb(134, 134, 134);
-  counter-set: line 0;
-}
-pre.snippet code span.newline {
-  counter-increment: line;
-}
-pre.snippet code span.newline:after {
-  color: rgb(192, 192, 192);
-  position: relative;
-  display: inline-block;
-  content: counter(line);
-  width: 0;
-  right: 2rem;
-  direction: rtl;
-  word-wrap: normal;
-}
-
-code {
-  font-family: "IBM Plex Mono", monospace;
-  white-space: pre-wrap;
-  hyphens: none;
-  font-size: 90.625%;
-}
-
-code span.syntax-identifier,
-code span.syntax-operator {
-  color: rgb(22, 22, 22);
-}
-code span.syntax-binding {
-  color: rgb(22, 22, 22);
-  font-style: italic;
-}
-code span.syntax-attribute,
-code span.syntax-directive,
-code span.syntax-keyword,
-code span.syntax-magic {
-  color: rgb(253, 39, 99);
-}
-code span.syntax-interpolation,
-code span.syntax-pseudo {
-  color: rgb(255, 86, 158);
-}
-code span.syntax-literal-number,
-code span.syntax-literal-string {
-  color: rgb(141, 61, 231);
-}
-code span.syntax-actor, code a.syntax-actor,
-code span.syntax-class, code a.syntax-class,
-code span.syntax-type, code a.syntax-type {
-  color: rgb(255, 123, 0);
-}
-code span.syntax-typealias {
-  color: rgb(255, 86, 158);
-  font-style: italic;
-}
-code span.syntax-comment,
-code span.syntax-doccomment {
-  color: rgb(109, 109, 109);
-  font-style: italic;
-}
-
-nav.decl {
-  padding: 0.5rem 0;
-  overflow: hidden;
-  overflow-wrap: break-word;
-}
-
-nav.decl div.breadcrumbs {
-  color: rgb(134, 134, 134);
-  font-family: "IBM Plex Mono", monospace;
-  font-weight: 500;
-  font-size: 90.625%;
-}
-nav.decl div.breadcrumbs a {
-  color: rgb(112, 112, 112);
-}
-nav.decl div.breadcrumbs > *:first-child {
-  margin-left: 0;
-}
-nav.decl div.breadcrumbs > * {
-  margin: 0 0.2rem;
-}
-nav.decl div.breadcrumbs > *:last-child {
-  margin-right: 0;
-  color: rgb(22, 22, 22);
-}
-
-section.introduction {
-  margin-top: 4rem;
-  padding: 0 0 0.75rem;
-  border-bottom: 2px solid rgb(253, 39, 99);
-}
-section.introduction div.eyebrows {
-  color: rgb(112, 112, 112);
-  font-style: italic;
-  display: flex;
-  flex-direction: row;
-}
-section.introduction div.eyebrows .phylum {
-  flex: 1;
-}
-section.introduction div.eyebrows .phylum .kink {
-  font-weight: 600;
-}
-section.introduction div.eyebrows span.module span.culture:before,
-section.introduction div.eyebrows span.module span.culture:after {
-  margin: 0 0.2rem;
-}
-section.introduction div.eyebrows span.module span.culture:before {
-  content: "(";
-}
-section.introduction div.eyebrows span.module span.culture .version:last-child:after {
-  content: "";
-  padding: 0;
-}
-section.introduction div.eyebrows span.module span.culture .version:after {
-  content: ":";
-  padding: 0 0.25rem;
-}
-section.introduction div.eyebrows span.module span.culture:after {
-  content: ")";
-}
-section.introduction a.source {
-  font-family: "IBM Plex Mono", monospace;
-  font-size: 87.5%;
-  color: rgb(112, 112, 112);
-  text-decoration-color: rgb(253, 39, 99);
-}
-section.introduction a.source span.file {
-  font-weight: 500;
-}
-section.introduction a.source span.file,
-section.introduction a.source span.line {
-  color: rgb(253, 39, 99);
-}
-
-section.declaration pre {
-  text-indent: -2.5rem;
-  padding-left: 2.5rem;
-  margin: 2.5rem 0 2.5rem;
-}
-section.declaration pre code {
-  font-size: inherit;
-}
-
-section.parameters > *,
-section.parameters > dl > dd,
-section.returns > *,
-section.returns > dl > dd {
-  padding-left: 3rem;
-  margin-left: 0;
-}
-section.parameters > h2,
-section.parameters > dl,
-section.returns > h2,
-section.returns > dl {
-  padding-left: 0;
-}
-
-section.parameters dl {
-  counter-set: parameter-index -1;
-}
-section.parameters dl dt {
-  counter-increment: parameter-index;
-  margin-top: 2rem;
-  font-family: "IBM Plex Mono", monospace;
-  font-weight: 700;
-}
-section.parameters dl dt:before {
-  content: "$" counter(parameter-index);
-  display: inline-block;
-  min-width: 3rem;
-  color: rgb(192, 192, 192);
-  font-weight: normal;
-}
-
-section.group code.constraints {
-  line-height: 1.6rem;
-  color: rgb(134, 134, 134);
-  font-size: inherit;
-  display: block;
-  text-indent: -3.6rem;
-  margin-left: 3.6rem;
-}
-section.group code.constraints span.syntax-keyword {
-  color: rgb(109, 109, 109);
-}
-section.group code.constraints span.syntax-type,
-section.group code.constraints span.syntax-typealias {
-  color: rgb(255, 123, 0);
-  font-weight: 500;
-}
-section.group code.constraints span.syntax-type a,
-section.group code.constraints span.syntax-typealias a {
-  color: inherit;
-}
-
-section.group h2 {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-}
-
-section.group h2 + h3,
-section.group code.constraints + h3 {
-  margin-top: 1rem;
-}
-
-section.group h2 + h3 {
-  border-top: solid 1px rgb(255, 86, 158);
-}
-
-section.group code.constraints + h3 {
-  border-top: solid 1px rgb(255, 123, 0);
-}
-
-section.group.extension h3 {
-  margin-top: 1rem;
-  border-top: dashed 1px rgb(112, 112, 112);
-  padding-top: 0.75rem;
-  font-weight: 600;
-  color: rgb(112, 112, 112);
-}
-
-section.group ul {
-  padding: 0;
-  margin-bottom: 3rem;
-  list-style-type: none;
-}
-section.group ul > li.article {
-  margin: 1.5rem 0 0.5rem 0;
-}
-section.group ul > li.article a:first-child {
-  color: inherit;
-}
-section.group ul > li.article a:first-child h3 {
-  font-family: "Literata", serif;
-  font-weight: normal;
-  font-size: 125%;
-  margin: 0.5rem 0;
-}
-section.group ul > li.article a.read-more {
-  font-style: italic;
-}
-section.group ul > li.article + li.article {
-  margin-top: 2rem;
-}
-section.group ul > li.decl,
-section.group ul > li.module {
-  margin: 0.5rem 0 0.5rem 0;
-  padding: 0;
-}
-section.group ul > li.decl > a,
-section.group ul > li.module > a {
-  display: block;
-  text-indent: -2.5rem;
-  margin-left: 2.5rem;
-  line-height: 1.5rem;
-  font-family: "IBM Plex Mono", monospace;
-  color: rgb(109, 109, 109);
-  font-size: inherit;
-  padding: 0.8em 0 0 0;
-}
-section.group ul > li.decl > a span.syntax-identifier,
-section.group ul > li.module > a span.syntax-identifier {
-  color: rgb(253, 39, 99);
-}
-section.group ul > li.decl p,
-section.group ul > li.module p {
-  padding: 0 0 0 2.5rem;
-  line-height: 1.3rem;
-  font-size: 90.625%;
-}
-
-nav a.logo {
-  font-family: "DM Sans", sans-serif;
-  font-size: 12pt;
-  font-weight: 700;
-}
-
-ul.typetree {
-  margin-top: 10rem;
-  font-family: "IBM Plex Mono", monospace;
-  font-size: 0.8125rem;
-}
-ul.typetree > li::first-letter {
-  color: rgb(255, 86, 158);
-}
-
-ul.typetree,
-ul.typetree ul {
-  list-style-type: none;
-  padding-left: 1rem;
-}
-
-ul.typetree li {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: "...";
-  color: rgb(112, 112, 112);
-}
-ul.typetree li a {
-  color: inherit;
-}
-ul.typetree li a:hover {
-  text-decoration: none;
-  color: rgb(255, 86, 158);
-}
-
-h1, h2, h3, h4 {
-  font-family: "DM Sans", sans-serif;
-}
-
-h1 {
-  font-size: 200%;
-}
-
-h2 {
-  font-size: 150%;
-}
-
-h3 {
-  font-size: 130%;
-}
-
-h4 {
-  font-size: 110%;
-}
-
-p {
-  line-height: 1.8rem;
-  hyphens: auto;
-}
-
-p code {
-  background-color: rgb(233, 233, 233);
-  padding: 0.2rem 0.5rem 0.25rem;
-  line-height: 0;
-  border-radius: 0.4rem;
-}
-
-aside {
-  position: relative;
-  margin: 2rem 0;
-  left: -1rem;
-}
-aside > * {
-  margin-left: 1rem;
-}
-aside h3 {
-  border-radius: 0.2rem;
-  margin: 0;
-  padding: 0.5rem 1rem;
-  font-size: inherit;
-  background: rgb(112, 112, 112);
-  color: rgb(240, 240, 240);
-}
-
-aside.important h3,
-aside.warning h3 {
-  background: rgb(253, 39, 99);
-  color: rgb(240, 240, 240);
-}
-
-nav {
-  padding: 0.25rem 0;
-}
-
-body {
-  min-height: 100vw;
-  margin: 0;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-}
-body div.sidebar {
-  display: none;
-}
-body div.content {
-  flex: 0 1 48rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  overflow: hidden;
-  overflow-wrap: break-word;
-}
-
-@media only screen and (min-width: 50rem) {
-  body div.sidebar {
-    display: block;
-    flex: 0 0 16rem;
-    width: 16rem;
-  }
-  div.content {
-    padding-left: 4rem;
-  }
-}
-body main section.introduction > p,
-body main section.introduction > dl,
-body main section.parameters > p,
-body main section.parameters > dl,
-body main section.returns > p,
-body main section.returns > dl,
-body main section.throws > p,
-body main section.throws > dl {
-  max-width: 40rem;
-}
-body main section.details p {
-  max-width: 40rem;
-}
-body main section.details aside {
-  max-width: 41rem;
-}
-body main section.extension ul > li > p {
-  max-width: 40rem;
-}
-body main > *:last-child {
-  padding-bottom: 10rem;
-}
-
-html {
-  font-size: 1rem;
-  background-color: rgb(240, 240, 240);
-}
-
-body {
-  color: rgb(22, 22, 22);
-  font-family: "Literata", serif;
-  font-variant-numeric: oldstyle-nums;
-  text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-}
-
-a {
-  color: rgb(253, 39, 99);
-  text-decoration: none;
-}
-
-a:hover, a:focus {
-  text-decoration: underline;
-  text-underline-offset: 0.35em;
-}
-
-/*# sourceMappingURL=Main.css.map */
+pre{margin:2rem 0 2rem;line-height:1.5rem;font-size:1rem}pre.snippet code{color:#868686;counter-set:line 0}pre.snippet code span.newline{counter-increment:line}pre.snippet code span.newline:after{color:silver;position:relative;display:inline-block;content:counter(line);width:0;right:2rem;direction:rtl;word-wrap:normal}code{font-family:"IBM Plex Mono",monospace;white-space:pre-wrap;hyphens:none;font-size:90.625%}code span.syntax-identifier,code span.syntax-operator{color:#161616}code span.syntax-binding{color:#161616;font-style:italic}code span.syntax-attribute,code span.syntax-directive,code span.syntax-keyword,code span.syntax-magic{color:#fd2763}code span.syntax-interpolation,code span.syntax-pseudo{color:#ff569e}code span.syntax-literal-number,code span.syntax-literal-string{color:#8d3de7}code span.syntax-actor,code a.syntax-actor,code span.syntax-class,code a.syntax-class,code span.syntax-type,code a.syntax-type{color:#ff7b00}code span.syntax-typealias{color:#ff569e;font-style:italic}code span.syntax-comment,code span.syntax-doccomment{color:#6d6d6d;font-style:italic}nav.decl{padding:.5rem 0;overflow:hidden;overflow-wrap:break-word}nav.decl div.breadcrumbs{color:#868686;font-family:"IBM Plex Mono",monospace;font-weight:500;font-size:90.625%}nav.decl div.breadcrumbs a{color:#707070}nav.decl div.breadcrumbs>*:first-child{margin-left:0}nav.decl div.breadcrumbs>*{margin:0 .2rem}nav.decl div.breadcrumbs>*:last-child{margin-right:0;color:#161616}section.introduction{margin-top:4rem;padding:0 0 .75rem;border-bottom:2px solid #fd2763}section.introduction div.eyebrows{color:#707070;font-style:italic;display:flex;flex-direction:row}section.introduction div.eyebrows .phylum{flex:1}section.introduction div.eyebrows .phylum .kink{font-weight:600}section.introduction div.eyebrows span.module span.culture:before,section.introduction div.eyebrows span.module span.culture:after{margin:0 .2rem}section.introduction div.eyebrows span.module span.culture:before{content:"("}section.introduction div.eyebrows span.module span.culture .version:last-child:after{content:"";padding:0}section.introduction div.eyebrows span.module span.culture .version:after{content:":";padding:0 .25rem}section.introduction div.eyebrows span.module span.culture:after{content:")"}section.introduction a.source{font-family:"IBM Plex Mono",monospace;font-size:87.5%;color:#707070;text-decoration-color:#fd2763}section.introduction a.source span.file{font-weight:500}section.introduction a.source span.file,section.introduction a.source span.line{color:#fd2763}section.declaration pre{text-indent:-2.5rem;padding-left:2.5rem;margin:2.5rem 0 2.5rem}section.declaration pre code{font-size:inherit}section.parameters>*,section.parameters>dl>dd,section.returns>*,section.returns>dl>dd{padding-left:3rem;margin-left:0}section.parameters>h2,section.parameters>dl,section.returns>h2,section.returns>dl{padding-left:0}section.parameters dl{counter-set:parameter-index -1}section.parameters dl dt{counter-increment:parameter-index;margin-top:2rem;font-family:"IBM Plex Mono",monospace;font-weight:700}section.parameters dl dt:before{content:"$" counter(parameter-index);display:inline-block;min-width:3rem;color:silver;font-weight:normal}section.group code.constraints{line-height:1.6rem;color:#868686;font-size:inherit;display:block;text-indent:-3.6rem;margin-left:3.6rem}section.group code.constraints span.syntax-keyword{color:#6d6d6d}section.group code.constraints span.syntax-type,section.group code.constraints span.syntax-typealias{color:#ff7b00;font-weight:500}section.group code.constraints span.syntax-type a,section.group code.constraints span.syntax-typealias a{color:inherit}section.group h2{margin-top:2rem;margin-bottom:1rem}section.group h2+h3,section.group code.constraints+h3{margin-top:1rem}section.group h2+h3{border-top:solid 1px #ff569e}section.group code.constraints+h3{border-top:solid 1px #ff7b00}section.group.extension h3{margin-top:1rem;border-top:dashed 1px #707070;padding-top:.75rem;font-weight:600;color:#707070}section.group ul{padding:0;margin-bottom:3rem;list-style-type:none}section.group ul>li.article{margin:1.5rem 0 .5rem 0}section.group ul>li.article a:first-child{color:inherit}section.group ul>li.article a:first-child h3{font-family:"Literata",serif;font-weight:normal;font-size:125%;margin:.5rem 0}section.group ul>li.article a.read-more{font-style:italic}section.group ul>li.article+li.article{margin-top:2rem}section.group ul>li.decl,section.group ul>li.module{margin:.5rem 0 .5rem 0;padding:0}section.group ul>li.decl>a,section.group ul>li.module>a{display:block;text-indent:-2.5rem;margin-left:2.5rem;line-height:1.5rem;font-family:"IBM Plex Mono",monospace;color:#6d6d6d;font-size:inherit;padding:.8em 0 0 0}section.group ul>li.decl>a span.syntax-identifier,section.group ul>li.module>a span.syntax-identifier{color:#fd2763}section.group ul>li.decl p,section.group ul>li.module p{padding:0 0 0 2.5rem;line-height:1.3rem;font-size:90.625%}nav a.logo{font-family:"DM Sans",sans-serif;font-size:12pt;font-weight:700}ul.typetree{margin-top:10rem;font-family:"IBM Plex Mono",monospace;font-size:.8125rem}ul.typetree>li::first-letter{color:#ff569e}ul.typetree,ul.typetree ul{list-style-type:none;padding-left:1rem}ul.typetree li{overflow:hidden;white-space:nowrap;text-overflow:"...";color:#707070}ul.typetree li a{color:inherit}ul.typetree li a:hover{text-decoration:none;color:#ff569e}h1,h2,h3,h4{font-family:"DM Sans",sans-serif}h1{font-size:200%}h2{font-size:150%}h3{font-size:130%}h4{font-size:110%}p{line-height:1.8rem;hyphens:auto}p code{background-color:#e9e9e9;padding:.2rem .5rem .25rem;line-height:0;border-radius:.4rem}aside{position:relative;margin:2rem 0;left:-1rem}aside>*{margin-left:1rem}aside h3{border-radius:.2rem;margin:0;padding:.5rem 1rem;font-size:inherit;background:#707070;color:#f0f0f0}aside.important h3,aside.warning h3{background:#fd2763;color:#f0f0f0}nav{padding:.25rem 0}body{min-height:100vw;margin:0;display:flex;flex-direction:row-reverse;justify-content:center}body div.sidebar{display:none}body div.content{flex:0 1 48rem;padding-left:1rem;padding-right:1rem;overflow:hidden;overflow-wrap:break-word}@media only screen and (min-width: 50rem){body div.sidebar{display:block;flex:0 0 16rem;width:16rem}div.content{padding-left:4rem}}body main section.introduction>p,body main section.introduction>dl,body main section.parameters>p,body main section.parameters>dl,body main section.returns>p,body main section.returns>dl,body main section.throws>p,body main section.throws>dl{max-width:40rem}body main section.details p{max-width:40rem}body main section.details aside{max-width:41rem}body main section.extension ul>li>p{max-width:40rem}body main>*:last-child{padding-bottom:10rem}html{font-size:1rem;background-color:#f0f0f0}body{color:#161616;font-family:"Literata",serif;font-variant-numeric:oldstyle-nums;text-size-adjust:none;-webkit-text-size-adjust:none}a{color:#fd2763;text-decoration:none}a:hover,a:focus{text-decoration:underline;text-underline-offset:.35em}/*# sourceMappingURL=Main.css.map */
