make swiftinit search great again

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -44,7 +44,7 @@ body
         flex: 0 0 16rem;
         width: 16rem;
     }
-    div.content
+    body div.content
     {
         padding-left: 4rem;
     }
