--- a/Stylesheets/_Sidebar.scss
+++ b/Stylesheets/_Sidebar.scss
@@ -1,7 +1,7 @@
 @import 'Colors';
 @import 'Typefaces';
 
-ul.typetree
+ul.nountree
 {
     margin-top: 10rem;
 
@@ -13,13 +13,13 @@ ul.typetree
         color: $light-accent-barbie-pink;
     }
 }
-ul.typetree,
-ul.typetree ul
+ul.nountree,
+ul.nountree ul
 {
     list-style-type: none;
     padding-left: 1.0rem;
 }
-ul.typetree li
+ul.nountree li
 {
     overflow: hidden;
     white-space: nowrap;
