--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -1,4 +1,5 @@
 $light-background: rgb(240, 240, 240);
+$light-background-pink: rgb(255, 224, 239);
 $light-foreground: rgb(22, 22, 22);
 $light-foreground-semi: rgb(112, 112, 112);
 
