--- a/Stylesheets/_Declarations.scss
+++ b/Stylesheets/_Declarations.scss
@@ -1,7 +1,5 @@
 nav.decl
 {
-    padding: 0.5rem 0;
-
     overflow: hidden;
     overflow-wrap: break-word;
 }
@@ -34,7 +32,7 @@ nav.decl div.breadcrumbs
 
 section.introduction
 {
-    margin-top: 4rem;
+    margin-top: 0;
     padding: 0 0 0.75rem;
     border-bottom: 2px solid $light-accent-hot-pink;
 
