greatly simplify the nountree building logic, which also seems to fix a weird heisenbug in the sort order.

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -136,7 +136,7 @@ body
 
 a
 {
-    color: $light-accent-hot-pink;
+    color: $light-accent-barbie-pink;
     text-decoration: none;
 }
 a:hover, a:focus
