fix invalid generated list HTML, print fallback text for out-of-package extension prefixes

--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -11,6 +11,7 @@ $light-accent-comment: rgb(109, 109, 109);
 $light-accent-barbie-pink: rgb(255, 86, 158);
 $light-accent-hot-pink: rgb(253, 39, 110);
 $light-accent-yellow: rgb(255, 123, 0);
+$light-accent-lavender: rgb(189, 108, 255);
 $light-accent-violet: rgb(141, 61, 231);
 
 $dark-accent-yellow: rgb(255, 157, 32);
