--- a/Stylesheets/_Declarations.scss
+++ b/Stylesheets/_Declarations.scss
@@ -241,14 +241,14 @@ section.details
             box-shadow:
                 inset 0 -0.5rem 0.75rem -0.75rem rgba(255, 255, 255, 0.3),
                 inset 0 -0.4rem 0.05rem  0.1rem rgba(0,0,0,0.33),
-                inset 0 -1.3rem 5rem     0.1rem rgba(0,0,0,0.25);
+                inset 0 -1.3rem 5rem     0.1rem rgba(0,0,0,0.18);
         }
         > div.pie-color:hover + div.pie-geometry
         {
             box-shadow:
                 inset 0 -0.5rem 1.5rem -0.75rem rgba(255, 255, 255, 0.5),
                 inset 0 -0.4rem 0.05rem  0.1rem rgba(0,0,0,0.33),
-                inset 0 -1.3rem 5rem     0.1rem rgba(0,0,0,0.25);
+                inset 0 -1.3rem 5rem     0.1rem rgba(0,0,0,0.11);
         }
 
         > div.pie-color > svg g
@@ -259,15 +259,15 @@ section.details
             }
             > *.protocol
             {
-                fill: rgb(148, 82, 255);
+                fill: rgb(82, 206, 255);
             }
             > *.requirement
             {
-                fill: rgb(131, 64, 255);
+                fill: rgb(130, 255, 249);
             }
             > *.witness
             {
-                fill: rgb(152, 140, 255);
+                fill: rgb(171, 255, 244);
             }
             > *.actor
             {
@@ -287,11 +287,11 @@ section.details
             }
             > *.constructor
             {
-                fill: rgb(247, 65, 165);
+                fill: rgb(255, 103, 141);
             }
             > *.method
             {
-                fill: rgb(255, 119, 194);
+                fill: rgb(255, 170, 196);
             }
             > *.functor
             {
@@ -308,6 +308,19 @@ section.details
             > *.function
             {
                 fill: rgb(255, 103, 103);
+            }
+
+            > *.coverage.undocumented
+            {
+                fill: rgb(238, 238, 238);
+            }
+            > *.coverage.indirect
+            {
+                fill: rgb(255, 170, 196);
+            }
+            > *.coverage.direct
+            {
+                fill: rgb(255, 103, 141);
             }
         }
     }
