clean up appearance of search results css

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -5,7 +5,7 @@
 @import 'Declarations';
 @import 'Groups';
 @import 'Logo';
-@import 'Searchbars';
+@import 'Search';
 @import 'Sidebar';
 @import 'Typefaces';
 @import 'Prose';
