display the availability badges or deprecation notice

--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -3,6 +3,12 @@ $light-background-pink: rgb(255, 224, 239);
 $light-foreground: rgb(22, 22, 22);
 $light-foreground-semi: rgb(109, 109, 109);
 
+$light-foreground-elevated: rgb(223, 223, 223);
+$light-foreground-elevated-shadow: rgb(172, 172, 172);
+
+$light-coral-elevated: rgb(255, 103, 103);
+$light-coral-elevated-shadow: rgb(235, 75, 75);
+
 $light-code-well: rgb(233, 233, 233);
 $light-snippet-line-number: rgb(192, 192, 192);
 
