--- a/Stylesheets/_Declarations.scss
+++ b/Stylesheets/_Declarations.scss
@@ -106,6 +106,75 @@ section.introduction
         }
     }
 }
+
+section.deprecation
+{
+    margin: 0.75rem 0;
+
+    display: flex;
+    align-items: stretch;
+}
+section.deprecation::before
+{
+    padding: 0.25rem 1rem 0.5rem 1rem;
+
+    font-family: $typeface-serif;
+    font-size: 150%;
+    font-weight: 400;
+
+    background-color: $light-coral-elevated;
+    border-radius: 0.5rem 0 0 0.5rem;
+    box-shadow: 0 0.25rem 0 0 $light-coral-elevated-shadow;
+    color: white;
+    content: '!';
+}
+section.deprecation > p
+{
+    flex: 1 1 auto;
+    margin: 0;
+    padding: 0.5rem 0.5rem 0.5rem 1rem;
+
+    font-family: $typeface-monospace;
+
+    background-color: $light-foreground-elevated;
+    border-radius: 0 0.5rem 0.5rem 0;
+    box-shadow: 0 0.25rem 0 0 $light-foreground-elevated-shadow;
+}
+
+section.availability
+{
+    margin: 0.75rem 0;
+
+    dl
+    {
+        margin: 0;
+        font-size: 87.5%;
+        font-family: $typeface-sans;
+
+        dt, dd
+        {
+            display: inline-block;
+            background: $light-accent-barbie-pink;
+            color: white;
+        }
+        dt:first-child
+        {
+            margin: 0;
+        }
+        dt
+        {
+            margin: 0 0 0 0.5em;
+            padding: 0.1em 0.2em 0.1em 0.4em;
+            border-radius: 0.25rem 0 0 0.25rem;
+        }
+        dd
+        {
+            margin: 0;
+            padding: 0.1em 0.4em 0.1em 0.2em;
+            border-radius: 0 0.25rem 0.25rem 0;
+        }
+    }
+}
 section.declaration pre
 {
     text-indent: -2.5rem;
@@ -152,93 +221,6 @@ section.parameters
             min-width: 3rem;
             color: $light-snippet-line-number;
             font-weight: normal;
-        }
-    }
-}
-section.details
-{
-    dl
-    {
-        display: grid;
-        grid-template-columns: 33% auto;
-
-        dt
-        {
-            grid-column: 1;
-        }
-        dd
-        {
-            grid-column: 2;
-        }
-    }
-
-    div.stats
-    {
-        width: 14rem;
-        float: right;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        h2, h3
-        {
-            font-size: 100%;
-            margin: 0;
-        }
-        h3
-        {
-            font-weight: 500;
-            color: $light-foreground-semi;
-        }
-
-        figure
-        {
-            margin: 1rem;
-
-            div.pie
-            {
-                font-size: 10px;
-            }
-        }
-    }
-
-    table
-    {
-        width: 100%;
-    }
-    table th
-    {
-        text-align: left;
-        font-family: $typeface-sans;
-        padding-bottom: 0.5rem;
-
-        color: $light-foreground-semi;
-        border-bottom: 2px solid $light-swift;
-    }
-    table tbody tr:first-child td
-    {
-        padding-top: 0.5rem;
-    }
-    table th,
-    table td
-    {
-        padding-left: 0.5rem;
-    }
-    table th:first-child,
-    table td:first-child
-    {
-        padding-left: 0;
-    }
-
-    table.dependencies
-    {
-        td:first-child
-        {
-            font-style: italic;
-        }
-        td span.upto
-        {
-            padding: 0 0.5rem;
         }
     }
 }
