render cards pointing to deprecated decls in strikethrough font

--- a/Stylesheets/_Groups.scss
+++ b/Stylesheets/_Groups.scss
@@ -120,6 +120,16 @@ section.group ul
             }
         }
 
+        > a.not-recommended
+        {
+            text-decoration: line-through;
+
+            span.syntax-identifier
+            {
+                color: inherit;
+            }
+        }
+
         p
         {
             padding: 0 0 0 2.5rem;
