get rid of the label highlight, and emit special wbr and span indent markers to perform signature linebreaking. also make linebreaking only apply to the multiline css style, and apply that style if the signature is more than 80 characters long

--- a/Stylesheets/_CodeSpans.scss
+++ b/Stylesheets/_CodeSpans.scss
@@ -54,3 +54,19 @@ code
         font-style: italic;
     }
 }
+code.multiline
+{
+    span.xi::before
+    {
+        content: '\a';
+    }
+    span.xi::after
+    {
+        content: '    ';
+        display: inline-block;
+    }
+    wbr
+    {
+        display: block;
+    }
+}
