--- a/Stylesheets/_Groups.scss
+++ b/Stylesheets/_Groups.scss
@@ -100,40 +100,42 @@ section.group ul
         margin: 0.5rem 0 0.5rem 0;
         padding: 0;
 
-        > a
+        > code
         {
             display: block;
             padding: 0.8em 0 0 0;
-
             text-indent: -2.5rem;
             margin-left: 2.5rem;
-            line-height: 1.5rem;
             white-space: pre-wrap;
 
-            font-family: $typeface-monospace;
-            color: $light-accent-comment;
+            font-size: 100%;
+            line-height: 1.5rem;
 
-            font-size: inherit;
-
-            span.syntax-identifier,
-            span.syntax-label
+            a
             {
-                color: $light-accent-hot-pink;
+                color: $light-accent-comment;
+
+                span.syntax-identifier
+                {
+                    color: $light-accent-hot-pink;
+                }
             }
-            span.syntax-label::before
+
+            a.discouraged
             {
-                content: '\a';
+                text-decoration: line-through;
+
+                span.syntax-identifier
+                {
+                    color: inherit;
+                }
             }
         }
 
-        > a.not-recommended
+        > code.multiline
         {
-            text-decoration: line-through;
-
-            span.syntax-identifier
-            {
-                color: inherit;
-            }
+            text-indent: 0;
+            margin-left: 0;
         }
 
         p
