track @_spi ness of declarations, and display the warning on the doc pages

--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -15,6 +15,8 @@ $light-snippet-line-number: rgb(192, 192, 192);
 $light-swift: rgb(134, 134, 134);
 $light-accent-comment: $light-foreground-semi;
 $light-accent-barbie-pink: rgb(255, 86, 158);
+$light-accent-barbie-pink-shadow: rgb(209, 23, 104);
+
 $light-accent-hot-pink: rgb(253, 39, 110);
 $light-accent-yellow: rgb(255, 123, 0);
 $light-accent-lavender: rgb(189, 108, 255);
