display a link to latest stable release if viewing non-canonical documentation, and emit a rel=canonical link element and header if applicable

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -5,6 +5,7 @@
 @import 'Declarations';
 @import 'Groups';
 @import 'Logo';
+@import 'Notices';
 @import 'Search';
 @import 'Sidebar';
 @import 'Tables';
