make semver mandatory for PackageEdition(s), implement database migration logic for that change, and make the tags page list tags in semantic order

--- a/Stylesheets/_Tables.scss
+++ b/Stylesheets/_Tables.scss
@@ -39,7 +39,7 @@ section.details table.dependencies
 }
 section.details table.tags
 {
-    tr.latest
+    tr.modern
     {
         font-weight: 700;
     }
